[iOS] Ignore command+T from remote tabs page in tab grid.

|-openNewTabInPage:focusOmnibox:| was a no-op if the page was the
remote tabs  page, but TabGridCoordinator's |-showActiveTabInPage:
focusOmnibox:| used a NOTREACH() when called with the remote tabs page.
This CL updates them both to use NOTREACH(), and short-circuits from the
command+T handler if the page is the remote tabs page.

Bug: 869820
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ib394cc37a2b70420d3611e1440ad2b628a27c0a6
Reviewed-on: https://chromium-review.googlesource.com/1159087
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579901}
Former-commit-id: 512743d1acf7b809250f4aae884b30428037446f